# iced_nodegraph

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo-wasm.toml  Cargo.toml  LICENSE  README.md  RELEASING.md  build_demo_wasm.ps1  build_demo_wasm.sh  build_docs.ps1  build_docs.sh  continue-prompt.md  deny.toml  gpu_trace.py  install_stdb.ps1
.claude/: cclsp.json  settings.json
.claude/hooks/: validate.ps1  validate.sh
.githooks/: pre-commit  pre-push
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy-docs.yml  deploy.yml
demos/: README.md  lib.rs
demos/500_nodes/: Cargo.toml
demos/500_nodes/src/: lib.rs  main.rs
demos/500_nodes/src/graph/: layout.rs  mod.rs  procedural.rs
demos/500_nodes/src/nodes/: colors.rs  input.rs  math.rs  mod.rs  noise.rs  output.rs  texture.rs  vector.rs
demos/clip/: Cargo.toml
demos/clip/src/: main.rs
demos/common/: Cargo.toml
demos/common/src/: lib.rs  screenshot.rs
demos/demo_500_nodes/src/: lib.rs
demos/hello_world/: Cargo.toml  README.md
demos/hello_world/src/: ids.rs  lib.rs  main.rs  persistence.rs  style_overlay.rs
demos/hello_world/src/nodes/: bool_toggle.rs  calendar.rs  color_picker.rs  combine.rs  email_parser.rs  email_trigger.rs  enum_selector.rs  filter.rs  float_slider.rs  int_slider.rs  math.rs  mod.rs  pins.rs  style_config.rs
demos/hello_world/src/nodes/config/: apply.rs  background_config.rs  edge_config.rs  mod.rs  node_config.rs  pin_config.rs  shadow_config.rs
demos/interaction/: Cargo.toml  README.md
demos/interaction/src/: lib.rs  main.rs
demos/shader_editor/: Cargo.toml  README.md
demos/shader_editor/src/: colors.rs  default_shader.rs  error_shader.wgsl  lib.rs  main.rs  sdf_library.wgsl
demos/shader_editor/src/compiler/: codegen.rs  mod.rs  validation.rs
demos/shader_editor/src/shader_graph/: mod.rs  nodes.rs  sockets.rs
demos/static/: demo-loader.js  demo.css  sdf-shape-loader.js
demos/styling/: Cargo.toml  README.md
demos/styling/src/: lib.rs  main.rs
demos/styling/src/nodes/: mod.rs
docs/: README.md  RENDERING.md  WEBGPU-FAQ.md  architecture.md  demo.html  hello-world.html  hello_world.html  index.html
examples/: hello_world.rs  ngwa-rs.code-workspace
iced_nodegraph/: Cargo.toml  NODE_STYLE_GUIDE.md
iced_nodegraph/benches/: frame_prep.rs
iced_nodegraph/examples/: basic.rs  hello_world.rs
iced_nodegraph/src/: clipping_tests.rs  connection.rs  content.rs  coordinate_tests.rs  hello_world_demo.rs  helpers.rs  ids.rs  lib.rs  macros.rs  overlay_tests.rs  prelude.rs  style.rs
iced_nodegraph/src/node_grapgh/: camera.rs  canonical.rs  interaction_tests.rs  mod.rs  state.rs  widget.rs
iced_nodegraph/src/node_grapgh/effects/: mod.rs
iced_nodegraph/src/node_grapgh/effects/pipeline/: buffer.rs  cache.rs  mod.rs  physics.wgsl  shader.wgsl  types.rs
iced_nodegraph/src/node_grapgh/effects/primitive/: mod.rs  node.rs  pin.rs
iced_nodegraph/src/node_grapgh/physics/: mod.rs
iced_nodegraph/src/node_graph/: camera.rs  euclid.rs  input.rs  interaction_tests.rs  mod.rs  state.rs  widget.rs
iced_nodegraph/src/node_graph/effects/: mod.rs  shared.rs
iced_nodegraph/src/node_graph/effects/pipeline/: buffer.rs  mod.rs  shader.wgsl  types.rs
iced_nodegraph/src/node_graph/effects/primitive/: mod.rs  node.rs  pin.rs
iced_nodegraph/src/node_graph/effects/primitives/: cutting_tool.rs  edge.rs  edges.rs  grid.rs  mod.rs  node.rs  select_box.rs
iced_nodegraph/src/node_graph/widget/: camera_overlay.rs  draw.rs  update.rs
iced_nodegraph/src/node_pin/: mod.rs
iced_nodegraph/src/style/: cascade.rs  color.rs  config.rs  defaults.rs  edge.rs  mod.rs  mode.rs  node.rs  pin.rs  resolver.rs  sdf.rs  theme_defaults.rs
iced_nodegraph/tests/: edge_grid_pixel.rs  simulator.rs  widget_pixel.rs
iced_nodegraph/tests/common/: mod.rs
iced_nodegraph_macros/: Cargo.toml
iced_nodegraph_macros/src/: lib.rs
iced_nodegraph_sdf/: ARCHITECTURE.md  Cargo.toml  README.md
iced_nodegraph_sdf/examples/basic/: Cargo.toml
iced_nodegraph_sdf/examples/basic/src/: main.rs
iced_nodegraph_sdf/src/: biarc.rs  boolean.rs  color.rs  compile.rs  curve.rs  drawable.rs  lib.rs  pattern.rs  primitive.rs  recipe.rs  segment.rs  shape.rs  shared.rs  style.rs  tiling.rs
iced_nodegraph_sdf/src/pipeline/: arena.rs  bg_cache.rs  buffer.rs  mod.rs  overflow.rs  pixel_tests.rs  shader.wgsl  types.rs
iced_nodegraph_sdf/src/v3/: mod.rs
iced_sdf/: ARCHITECTURE.md  Cargo.toml
iced_sdf/examples/basic/: Cargo.toml
iced_sdf/examples/basic/src/: main.rs
iced_sdf/examples/gallery/: Cargo.toml
iced_sdf/examples/gallery/src/: lib.rs  main.rs  shapes.rs  widget.rs
iced_sdf/src/: batch.rs  boolean.rs  compile.rs  curve.rs  drawable.rs  eval.rs  layer.rs  lib.rs  pattern.rs  primitive.rs  shape.rs  shared.rs  style.rs  tiling.rs
iced_sdf/src/pipeline/: buffer.rs  mod.rs  pixel_tests.rs  shader.wgsl  types.rs
iced_sdf_legacy/: Cargo.toml
iced_sdf_legacy/examples/gallery/: Cargo.toml
iced_sdf_legacy/examples/gallery/src/: lib.rs  shapes.rs  widget.rs
iced_sdf_legacy/src/: compile.rs  layer.rs  lib.rs  pattern.rs  primitive.rs  shape.rs
iced_sdf_legacy/src/pipeline/: shader.wgsl
plan/: sdf-segment-architecture.md  sdf-stop-chain.md  shadow-banding-aa.md
src/: hello_world_demo.rs  lib.rs  lib_wasm.rs  wasm_demo.rs
src/node_grapgh/: COORDINATE_SPACES_ANALYSIS.md  COORDINATE_SYSTEM.md  TRANSFORM_TRACE.md  camera.rs  euclid.rs  interaction_tests.rs  mod.rs  state.rs  widget.rs
src/node_grapgh/effects/: mod.rs
src/node_grapgh/effects/pipeline/: buffer.rs  mod.rs  shader.wgsl  types.rs
src/node_grapgh/effects/primitive/: mod.rs  node.rs  pin.rs
src/node_pin/: mod.rs
