[package]
name = "iced_nodegraph"
version = "0.1.0"
edition = "2024"
authors = ["tuco86"]
description = "High-performance node graph editor widget for Iced with WebGPU shaders"
repository = "https://github.com/tuco86/iced_nodegraph"
license = "MIT"
readme = "README.md"
keywords = ["iced", "gui", "node-graph", "webgpu", "wasm"]
categories = ["gui", "graphics", "wasm", "visualization"]

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
default = []
wasm = [
    "wasm-bindgen", 
    "web-sys", 
    "console_error_panic_hook",
    "wasm-bindgen-futures",
    "serde",
    "serde_json"
]

[dependencies]
euclid = { version = "0.22.11", features = [ "bytemuck" ] }
bytemuck = { version = "1.24.0", features = ["derive"] }
glam = { version = "0.25.0", features = ["bytemuck"] }
iced_wgpu = { git = "https://github.com/iced-rs/iced.git", branch = "master" }
iced_widget = { git = "https://github.com/iced-rs/iced.git", branch = "master" }

# WGPU with WebGPU backend for WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "27.0", features = ["webgpu", "webgl"] }

# Force newer versions to reduce duplicates where possible
# Note: Some duplicates remain due to external dependencies (winit fork, WGPU stack)
bitflags = "2.10"
thiserror = "2.0"
rustc-hash = "2.1"

# WASM-specific dependencies (optional)
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", features = [
    "Window", 
    "Document", 
    "HtmlCanvasElement", 
    "WebGl2RenderingContext", 
    "Gpu", 
    "GpuAdapter", 
    "GpuDevice",
    "MouseEvent",
    "KeyboardEvent",
    "WheelEvent",
    "PointerEvent",
    "TouchEvent",
    "EventTarget",
    "Element"
], optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# Platform-specific iced configuration
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.iced]
git = "https://github.com/iced-rs/iced.git"
branch = "master"
features = ["advanced", "wgpu", "tokio"]

[target.'cfg(target_arch = "wasm32")'.dependencies.iced]
git = "https://github.com/iced-rs/iced.git"
branch = "master"
features = ["advanced", "wgpu", "webgl", "fira-sans"]
