[workspace]
members = [
    "iced_nodegraph",
    "demos/hello_world",
    "demos/styling",
    "demos/interaction",
    "demos/demo_500_nodes",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["tuco86"]
license = "MIT"
repository = "https://github.com/tuco86/iced_nodegraph"

[workspace.dependencies]
# Core library
iced_nodegraph = { path = "iced_nodegraph" }

# Iced framework (master branch for 0.14 features)
iced = { git = "https://github.com/iced-rs/iced.git", branch = "master" }
iced_wgpu = { git = "https://github.com/iced-rs/iced.git", branch = "master" }
iced_widget = { git = "https://github.com/iced-rs/iced.git", branch = "master" }

# Coordinate transformations and math
euclid = { version = "0.22.11", features = ["bytemuck"] }
bytemuck = { version = "1.0", features = ["derive"] }
glam = { version = "0.25", features = ["bytemuck"] }

# Graphics and GPU
wgpu = "27.0"

# Utilities
bitflags = "2.0"
thiserror = "2.0"
rustc-hash = "2.1"
web-time = "1.1"

# WASM support
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
