[workspace]
members = [
    "iced_nodegraph",
    "iced_nodegraph_sdf",
    "demos/hello_world",
    "demos/styling",
    "demos/interaction",
    "demos/500_nodes",
    "demos/shader_editor",
    "demos/common",
]
resolver = "2"

[workspace.package]
version = "0.5.0-dev"
edition = "2024"
authors = ["tuco86"]
license = "MIT"
repository = "https://github.com/tuco86/iced_nodegraph"

[workspace.dependencies]
# Core libraries. The `version` is required for publishing: crates.io strips
# the path and uses the version, so a versionless path dep cannot be published.
iced_nodegraph = { path = "iced_nodegraph", version = "0.5.0-dev" }
iced_nodegraph_sdf = { path = "iced_nodegraph_sdf", version = "0.5.0-dev" }
demo_common = { path = "demos/common" }

# Iced framework
iced = "0.14"
iced_wgpu = "0.14"
iced_test = "0.14"

iced_palette = "0.1"

# Coordinate transformations and math
euclid = { version = "0.22.11", features = ["bytemuck"] }
glam = { version = "0.25", features = ["bytemuck"] }
encase = "0.12"

# Utilities
iced_aw = { version = "0.14.1", default-features = false }
pollster = "0.4"
web-time = "1.1"
parking_lot = "0.12"

# WASM support
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
# opt-level = 3
# lto = true
# codegen-units = 1

[profile.dev]
opt-level = 1
