[package]
name = "iced_nodegraph"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "High-performance node graph editor widget for Iced with SDF-based rendering"
repository.workspace = true
license.workspace = true
readme = "../README.md"
keywords = ["iced", "gui", "node-graph", "widget"]
categories = ["gui", "graphics", "visualization"]

[dependencies]
euclid.workspace = true
iced_nodegraph_sdf.workspace = true
iced_wgpu.workspace = true
iced_widget.workspace = true
# WebGPU only - there is no WebGL fallback (see crate docs).
iced = { workspace = true, features = ["advanced", "wgpu", "tokio"] }
web-time.workspace = true

# Force newer versions to reduce duplicates where possible
# Note: Some duplicates remain due to external dependencies (winit fork, WGPU stack)
bitflags.workspace = true
thiserror.workspace = true
rustc-hash.workspace = true

[dev-dependencies]
iced_test = { workspace = true }
proptest = "1"
criterion = "0.5"
pollster.workspace = true

[[bench]]
name = "frame_prep"
harness = false
