[package]
name = "iced_nodegraph"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "High-performance node graph editor widget for Iced with SDF-based rendering"
repository.workspace = true
license.workspace = true
readme = "../README.md"
keywords = ["iced", "gui", "node-graph", "widget"]
categories = ["gui", "graphics", "visualization"]

[dependencies]
euclid.workspace = true
iced_nodegraph_sdf.workspace = true
iced_wgpu.workspace = true
iced_widget.workspace = true
# WebGPU only - there is no WebGL fallback (see crate docs).
iced = { workspace = true, features = ["wgpu"] }
web-time.workspace = true

[dev-dependencies]
# "advanced" is only used by the widget-trait test harnesses (coordinate_tests,
# clipping_tests, overlay_tests); production code goes through iced_widget
# directly, so this stays out of the published crate's [dependencies].
iced = { workspace = true, features = ["advanced"] }
iced_test = { workspace = true }
proptest = "1"
criterion = "0.5"
pollster.workspace = true
png = "0.18"

[[bench]]
name = "frame_prep"
harness = false
