[package]
name = "iced_nodegraph_sdf"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Segment-based SDF renderer for Iced with exact distance fields"
repository.workspace = true
license.workspace = true
keywords = ["iced", "sdf", "distance-field", "gpu", "segment"]
categories = ["gui", "graphics", "rendering"]

[features]
# Selects the v3 normalized/instanced SDF backend (default-off). v2 is the
# shipping default; v3 is built side-by-side behind this gate until it meets the
# acceptance bar (golden pixel-equivalence + no per-frame cost regression) on
# every corpus scene. Enabling this does not change the public widget API.
sdf-v3 = []

[dependencies]
bitflags.workspace = true
bytemuck.workspace = true
glam.workspace = true
encase.workspace = true
iced_wgpu.workspace = true
iced = { workspace = true, features = ["advanced", "wgpu"] }
web-time.workspace = true

[dev-dependencies]
pollster.workspace = true
wgpu.workspace = true
png = "0.18"

# WASM: Enable WebGL in iced_wgpu for fallback support
[target.'cfg(target_arch = "wasm32")'.dependencies]
iced_wgpu = { workspace = true, features = ["webgl"] }
