[package]
name = "iced_nodegraph_sdf"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Segment-based SDF renderer for Iced with exact distance fields"
repository.workspace = true
license.workspace = true
keywords = ["iced", "sdf", "distance-field", "gpu", "segment"]
categories = ["gui", "graphics", "rendering"]

[dependencies]
glam.workspace = true
encase.workspace = true
iced_wgpu.workspace = true
iced = { workspace = true, features = ["wgpu"] }
web-time.workspace = true
parking_lot.workspace = true

[dev-dependencies]
pollster.workspace = true
png.workspace = true
