[package]
name = "demo_500_nodes"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "demo_500_nodes"
path = "src/main.rs"

[dependencies]
iced_nodegraph.workspace = true
iced = { workspace = true, features = ["advanced", "wgpu", "tokio"] }
