[package]
name = "iced_nodegraph_demo_hello_world"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "hello_world"
path = "src/main.rs"

[features]
default = []
wasm = [
    "iced_nodegraph/wasm",
    "wasm-bindgen",
    "web-sys",
    "console_error_panic_hook",
]

[dependencies]
iced_nodegraph.workspace = true

# WASM-specific dependencies
wasm-bindgen = { workspace = true, optional = true }
web-sys = { workspace = true, features = [
    "Window",
    "Document",
], optional = true }
console_error_panic_hook = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.iced]
workspace = true
features = ["advanced", "wgpu", "tokio"]

[target.'cfg(target_arch = "wasm32")'.dependencies.iced]
workspace = true
features = ["advanced", "wgpu", "webgl"]
