[package]
name = "demo_hello_world"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "hello_world"
path = "src/main.rs"
doc = false

[features]
default = []
wasm = [
    "wasm-bindgen",
    "web-sys",
    "console_error_panic_hook",
    "iced/fira-sans",
]

[dependencies]
iced_nodegraph.workspace = true
# webgl feature adds WebGL2 fallback for browsers without WebGPU (ignored on native)
iced = { workspace = true, features = ["advanced", "wgpu", "tokio", "webgl"] }
iced_palette.workspace = true

# Persistence (native only)
serde = { workspace = true }
serde_json = { workspace = true }
directories = "5.0"

# WASM-specific dependencies
wasm-bindgen = { workspace = true, optional = true }
web-sys = { workspace = true, features = [
    "Window",
    "Document",
], optional = true }
console_error_panic_hook = { workspace = true, optional = true }

# WASM: Embed Fira Sans font (system fonts not available in browser)
[target.'cfg(target_arch = "wasm32")'.dependencies]
iced = { workspace = true, features = ["advanced", "wgpu", "tokio", "webgl", "fira-sans"] }
