[package]
name = "demo_hello_world"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "hello_world"
path = "src/main.rs"
doc = false

[features]
default = []
wasm = [
    "wasm-bindgen",
    "web-sys",
    "console_error_panic_hook",
    "iced/fira-sans",
]

[dependencies]
iced_nodegraph.workspace = true
demo_common.workspace = true
iced = { workspace = true, features = ["wgpu"] }
iced_palette.workspace = true

# ID generation (nanoid runs on both native and WASM, see getrandom below)
nanoid.workspace = true

# WASM-specific dependencies
wasm-bindgen = { workspace = true, optional = true }
web-sys = { workspace = true, features = [
    "Window",
    "Document",
], optional = true }
console_error_panic_hook = { workspace = true, optional = true }

# Persistence: the `persistence` module is `cfg(not(target_arch = "wasm32"))`,
# so these are only ever compiled for native targets.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
directories.workspace = true

# WASM: Embed Fira Sans font (system fonts not available in browser)
[target.'cfg(target_arch = "wasm32")'.dependencies]
iced = { workspace = true, features = ["wgpu", "fira-sans"] }
# Enable JS backend for getrandom 0.3 (required by nanoid/rand on WASM).
# Also needs `--cfg getrandom_backend="wasm_js"`, exported in build_docs.sh
# (or a local .cargo/config.toml for ad-hoc wasm checks).
getrandom = { workspace = true, features = ["wasm_js"] }
