[package]
name = "demo_interaction"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "interaction"
path = "src/main.rs"
doc = false

[features]
default = []
wasm = [
    "wasm-bindgen",
    "web-sys",
    "console_error_panic_hook",
    "iced/fira-sans",
]

[dependencies]
iced_nodegraph.workspace = true
iced = { workspace = true, features = ["advanced", "wgpu", "tokio"] }

# WASM-specific dependencies (for documentation demos only)
wasm-bindgen = { workspace = true, optional = true }
web-sys = { workspace = true, features = ["Window", "Document"], optional = true }
console_error_panic_hook = { workspace = true, optional = true }
