[package]
name = "demo_styling"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "demo_styling"
path = "src/main.rs"

[features]
default = []
wasm = [
    "wasm-bindgen",
    "web-sys",
    "console_error_panic_hook",
    "iced/fira-sans",
]

[dependencies]
iced_nodegraph.workspace = true
iced = { workspace = true, features = ["advanced", "wgpu", "tokio"] }

# WASM-specific dependencies (for documentation demos only)
wasm-bindgen = { workspace = true, optional = true }
web-sys = { workspace = true, features = ["Window", "Document"], optional = true }
console_error_panic_hook = { workspace = true, optional = true }
